@@ -20,5 +20,5 @@
                android:value="2.1" />
   </application>
   <uses-sdk android:minSdkVersion="21"
-            android:targetSdkVersion="23" />
+            android:targetSdkVersion="24" />
 </manifest>
